--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ PROJECT(main)
  
 find_package(VTK REQUIRED)
 include(${VTK_USE_FILE})
-add_executable(main main filament cylinder sphere) 
+add_executable(main main filament cylinder sphere strand) 
  
 if(VTK_LIBRARIES)
   target_link_libraries(main ${VTK_LIBRARIES})
