xml interface added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required (VERSION 2.6) 
 
 PROJECT(main)
+INCLUDE_DIRECTORIES("/usr/local/include/rapidxml-1.13/")
  
 find_package(VTK REQUIRED)
 include(${VTK_USE_FILE})
-add_executable(main main filament cylinder sphere strand) 
- 
+
+add_executable(main  main.cpp strand cylinder sphere filament xml_file_interactor)
 if(VTK_LIBRARIES)
   target_link_libraries(main ${VTK_LIBRARIES})
 else()
