--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,12 @@ cmake_minimum_required (VERSION 2.6)
 
 PROJECT(main)
 
-include_directories("/usr/local/include/rapidxml-1.13/" ${main_SOURCE_DIR} ${main_SOURCE_DIR}/pdb)
+include_directories(${main_SOURCE_DIR} ${main_SOURCE_DIR}/pdb ${main_SOURCE_DIR}/rapidxml-1.13)
 find_package(VTK REQUIRED)
 include(${VTK_USE_FILE})
 add_subdirectory(pdb)
 link_directories(${main_BINARY_DIR}/pdb)
-add_executable(main MACOSX_BUNDLE main.cpp xml_file_interactor cylinder strand elemental_strand)
+add_executable(main MACOSX_BUNDLE main.cpp xml_file_interactor cylinder strand elemental_strand packing gyroid)
 target_link_libraries(main pdb)
 if(VTK_LIBRARIES)
   target_link_libraries(main ${VTK_LIBRARIES})
